- Add huckle like cli commands to help with installation and configuration of user defined HCLIs
- Refactor the hcli specific authorization middleware to allow for generic http authorization
- Refactor to allow for custom 3rd party WSGI apps to be added to the lazy server manager
- Refactor tests to make use of hcli_core cli commands to configure services
- Update tests to make use of tox to get around circleci local execute cage groups v2 issues on linux
- Update to more reliable pkill in pytest cleanup fixture
- Update to output hcli_core help as text in the terminal rather than as a man page
- Update to falcon 4.1.0 from 4.0.2
- Update to allow for logging to file
- Update config file format and split config and credentials
- Update hcli_core documentation
- Remove duplicate set_plugin_path in config
- Remove support for python 3.8

## [3.7.3]
- Fix default logging from DEBUG back to INFO

## [3.7.2]
- Fix missing www-authenticate response header when client doesn't send authorization headers
- Add todos to README

## [3.7.1]
- Fix missing \ on carriage returns in hco template documentation

## [3.7.0]
- Add HCLI_CORE_BOOTSTRAP_PASSWORD environment variable use to improve security on admin password bootstrap
- Update hcli_core documentation
- Update logs to warnings from critical for bootstrap password information
- Update pyproject to meet the latest project license requirements
- Remove extraneous date in LICENSE.txt
- Fix extra line feed in hfm ls output

## [3.6.1]
- Fix inconsistent problem detail titles to completely align to http spec reason phrases
- Refactor the error handler to remove the falcon dependency from the error definitions
- Refactor to externalize problem details to the hcli_problem_details package so any hcli applications can invoke them

## [3.6.0]
- Add remote authentication tests
- Fix version command output

## [3.5.0]
- Add warning log output for core auth being disabled
- Add role based authorization for hco
- Add additional tests