@@ -13,7 +13,7 @@ commands =
     pip install --upgrade pip
     pip install --upgrade pytest
     pip install --upgrade --force-reinstall setuptools
-    pip install gunicorn==25.0.1
+    pip install gunicorn==25.0.3
     pip install huckle
     pip install -r requirements.txt
     pip install -e .
